Revert "Fix editor toolbar z-index passthrough"
This reverts commit e73ea76b75c599f671b8c1e7bcbc9625b932743b.

--- a/richeditor/redactor/redactor.custom.css
+++ b/richeditor/redactor/redactor.custom.css
@@ -6,9 +6,3 @@
   left: 0;
   top: 0;
 }
-
-/* Fix editor toolbar z-index passthrough  */
-main.v-main {
-  position: relative;
-  z-index: 1;
-}
